# Juce-SidePanel-Example

./: CMakeLists.txt  CMakePresets.json  README.md  SidePanelExample.jucer
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2015/: SidePanelExample.sln  SidePanelExample_App.vcxproj  SidePanelExample_App.vcxproj.filters
Builds/VisualStudio2017/: SidePanelExample.sln  SidePanelExample_App.vcxproj  SidePanelExample_App.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Main.cpp  MainComponent.h  SidePanelHeader.cpp  SidePanelHeader.h  SidePanelList.cpp  SidePanelList.h
app/: Main.cpp  MainComponent.cpp  MainComponent.h  SidePanelHeader.h  SidePanelList.h
